--- a/fastlane/metadata/no/release_notes.txt
+++ b/fastlane/metadata/no/release_notes.txt
@@ -1,1 +1,1 @@
-• This update includes support for the new telephone number format in Benin.
+• Denne oppdateringen inkluderer støtte for nye telefonnumre i Benin.
