Revert release notes to 7.40

--- a/fastlane/metadata/ar-SA/release_notes.txt
+++ b/fastlane/metadata/ar-SA/release_notes.txt
@@ -1,1 +1,2 @@
-• This update includes support for the new telephone number format in Benin.
+• تحسينات تخُصّ عرض الرموز التعبيرية
+• إصلاحات لأخطاء تخُصُّ ألبوم الوسائط وإدخال النصوص.—
