--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,1 +1,2 @@
-• This update includes support for the new telephone number format in Benin.
+• Хорошая новость для поклонников больших эмоций (или эмодзи)! Маленький пробел или разрыв строки между двумя символами эмодзи больше не сможет уменьшить их огромные размеры.
+• Мы также исправили ошибку, из-за которой панель вкладок иногда закрывала поле ввода текста, и другую, из-за которой изменённые вложения появлялись в галерее медиафайлов несколько раз. Теперь вы можете изменить прошлое, повторяя его.
