--- a/fastlane/metadata/uk/release_notes.txt
+++ b/fastlane/metadata/uk/release_notes.txt
@@ -1,1 +1,2 @@
-• This update includes support for the new telephone number format in Benin.
+• Не любите стримувати емоції (чи емоджі)? Тоді вам сподобається це оновлення: тепер емоджі з'являтимуться у великому форматі, навіть якщо між двома емоджі є пробіл або розрив рядка.
+• Також ми виправили дві помилки: панель навігації більше не закриватиме поле для введення тексту, а після внесення змін вкладення не з'являтимуться в галереї медіафайлів повторно, тож ви можете змінювати минуле без відчуття того, що «це ж було вже».
