--- a/fastlane/metadata/da/release_notes.txt
+++ b/fastlane/metadata/da/release_notes.txt
@@ -1,1 +1,2 @@
-• This update includes support for the new telephone number format in Benin.
+• Fans af store følelser (eller emojis) vil blive glade for at høre, at et lille mellemrum eller linjeskift mellem to emojikarakterer ikke længere forhindrer disse emoji i at blive vist i deres jumboform.
+• Vi har også rettet en fejl, der nogle gange fik fanelinjen til at dække tekstinputfeltet, og en anden, der fik redigerede vedhæftede filer til at blive vist i mediegalleriet flere gange – så nu kan du ændre fortiden uden at føle, at du gentager den.
