--- a/fastlane/metadata/es-MX/release_notes.txt
+++ b/fastlane/metadata/es-MX/release_notes.txt
@@ -1,1 +1,2 @@
-• This update includes support for the new telephone number format in Benin.
+• Si te gusta expresarte a lo grande (emojis incluidos), te alegrará saber que un simple espacio o salto de línea entre dos emojis ya no impedirá que aparezcan en formato gigante.
+• También hemos corregido un error que hacía que la barra de pestañas tapase el campo de entrada de texto y otro que duplicaba en la galería los archivos multimedia editados (así que ahora puedes cambiar el pasado sin sentir que lo estás repitiendo).
