--- a/fastlane/metadata/hi/release_notes.txt
+++ b/fastlane/metadata/hi/release_notes.txt
@@ -1,1 +1,2 @@
-• This update includes support for the new telephone number format in Benin.
+• इमोशंस (या इमोजी) की कद्र करने वाले लोगों को सुनकर खुशी होगी कि अब दो कैरेक्टर के बीच एक छोटे स्पेस या लाइन ब्रेक होने पर वे इमोजी अपने बड़े रूप में दिखाई देंगे।
+• हमने वह गड़बड़ी भी ठीक कर दी है जिसकी वजह से टैब बार टेक्स्ट इनपुट फ़ील्ड को छिपा देता था, और एक दूसरी गड़बड़ी जिसकी वजह से संपादित किए गए अटैचमेंट मीडिया गैलरी में एक से ज़्यादा बार दिखाई देते थे — तो अब आप अतीत को बदल सकते हैं, बिना यह महसूस किए कि आप इसे दोहरा रहे हैं।
